--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An implementation of the SMMRY algorithm, to summarize english text",
   "main": "out/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node -e \"require( 'wink-nlp/models/install' )\" wink-eng-lite-model"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/MayorMonty/smmry/issues"
   },
-  "homepage": "https://github.com/MayorMonty/smmry#readme"
+  "homepage": "https://github.com/MayorMonty/smmry#readme",
+  "dependencies": {
+    "wink-eng-lite-model": "https://github.com/winkjs/wink-eng-lite-model/releases/download/1.3.1/wink-eng-lite-model-1.3.1.tgz",
+    "wink-nlp": "^1.10.0"
+  }
 }
