--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "dependencies": {
     "wink-eng-lite-model": "https://github.com/winkjs/wink-eng-lite-model/releases/download/1.3.1/wink-eng-lite-model-1.3.1.tgz",
     "wink-nlp": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.5"
   }
 }
